[package]
name = "nojson"
version = "0.3.9"
edition = "2024"
rust-version = "1.88"
authors = ["Takeru Ohta <phjgt308@gmail.com>"]
license = "MIT"
description = "A flexible JSON library with no dependencies and no macros"
homepage = "https://github.com/sile/nojson"
repository = "https://github.com/sile/nojson"
readme = "README.md"
categories = ["encoding", "no-std", "parser-implementations"]

[features]
default = ["std"]
std = []

[dev-dependencies]
criterion = { version = "0.8", default-features = false }

[[bench]]
name = "parse"
harness = false

[[bench]]
name = "format"
harness = false

[workspace]
members = ["fuzz", "pbt"]
