[package]
name = "nojson"
version = "0.3.10"
edition = "2024"
rust-version = "1.88"
authors = ["Takeru Ohta <phjgt308@gmail.com>"]
license = "MIT"
description = "A flexible Rust JSON library with no dependencies, no macros, no unsafe and optional no_std support"
homepage = "https://github.com/sile/nojson"
repository = "https://github.com/sile/nojson"
readme = "README.md"
categories = ["encoding", "no-std", "parser-implementations"]

[features]
default = ["std"]
std = []

[dev-dependencies]
criterion = { version = "0.8", default-features = false }

[[bench]]
name = "parse"
harness = false

[[bench]]
name = "format"
harness = false

[workspace]
members = ["fuzz", "pbt"]
