[package]
name = "nojson"
version = "0.3.11"
edition = "2024"
rust-version = "1.88"
license = "MIT"
description = "A flexible Rust JSON library with no dependencies, no macros, no unsafe and optional no_std support"
homepage = "https://github.com/sile/nojson"
repository = "https://github.com/sile/nojson"
readme = "README.md"
categories = ["encoding", "no-std", "parser-implementations"]

[features]
default = ["std"]
std = []

[workspace]
members = ["fuzz", "pbt"]
